bootstrap + basic alterations

--- a/index.html
+++ b/index.html
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+
+
     <title>Junior Web Test</title>
 
-    
+
 </head>
+
 <body>
-    
+    <header class="container-fluid">
+        <div class="container">
+            <div>
+                <h1>Product List</h1>
+            </div>
+            <div>
+                <button type="button" class="btn btn-primary">ADD</button>
+                <Button type="button" class="btn btn-primary">MASS DELETE</Button>
+            </div>
+        </div>
+
+    </header>
+    <section class="container">
+        oi
+    </section>
+    <footer class="container-fluid footer-pos text-center">
+        <p>Scandiweb Test Assignment</p>
+    </footer>
 </body>
+
 </html>
